# PhalanxEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
applications/: CMakeLists.txt
applications/PhalanxEngine/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/core/: CMakeLists.txt
libraries/core/include/Core/: Command.hpp  Logbook.hpp  LogbookEntry.hpp  Logger.hpp  TokenisedIdentifier.hpp
libraries/core/source/: CMakeLists.txt
libraries/core/source/Core/: Command.cpp  Logbook.cpp  LogbookEntry.cpp  Logger.cpp  TokenisedIdentifier.cpp
libraries/core/test/: CMakeLists.txt
libraries/core/test/unit_tests/: CMakeLists.txt
libraries/core/test/unit_tests/Core/: Command.test.cpp  Logbook.test.cpp  LogbookEntry.test.cpp  Logger.test.cpp  TokenisedIdentifier.test.cpp  main.cpp
